fix layout issues

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -7,6 +7,7 @@
         margin: 0;
         box-sizing: border-box;
         scroll-behavior: smooth;
+        overflow-x: hidden;
         background: rgb(41 37 36);
     }
 
@@ -14,7 +15,19 @@
         box-sizing: inherit;
     }
 
-    ::-webkit-scrollbar {
-        display: none;
+    @media (min-width: 768px) {
+        ::-webkit-scrollbar {
+            background-image: linear-gradient(to bottom right, rgb(168 85 247) 10%, rgb(99 102 241) 90%);
+            width: 0.5rem;
+        }
+
+        ::-webkit-scrollbar-thumb {
+            background: rgb(130, 24, 237);
+            border-radius: 10px;
+        }
+
+        ::-webkit-scrollbar-thumb:hover {
+            background: rgb(53, 57, 236);
+        }
     }
 }
